--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body {
     backgraound-color: #FFFFE0;
     font-family: Arial, sans-serif
     color: #191970;
+.kartu-profil {
+    width: 300px;
+    margin: 50px auto; /* 50px jarak atas/bawah, auto menengahkan
+kiri/kanan */
+    padding: 20px;
+    backgraound-color: white;
+    border-radius: 15px; /* Membuat sudut menjadi melengkung */
+    box-shadow: 0 4px rgbaa(0,0,0,0.1); /* Efek bayangan */
